Allow keys with 0 segements in MyISAM This fixed a bug in SELECT DISTINCT when all selected parts where constants. (Bug #3203)

myisam/mi_create.c:
  Allow keys with 0 segements.
mysql-test/r/myisam.result:
  Test for problem with SELECT DISTINCT
mysql-test/t/myisam.test:
  Test for problem with SELECT DISTINCT